tests/ui/struct.stderr
error: c should sort before d
 --> $DIR/tests/ui/struct.rs:6:5
  |
6 |     c: usize,
  |     ^
